--- a/src/App.css
+++ b/src/App.css
@@ -95,9 +95,17 @@ nav ul {
   background-color: rgb(211, 211, 211);
 } */
 
+canvas {
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+}
+
 .hero-wrapper{
   width:520px ;
   position: absolute;
+  z-index: 10;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
