--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ nav {
   border: 1px solid #282828;
   background: #161414;
   box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.20);
-
+  z-index: 999;
 }
 
 nav ul {
