--- a/src/App.css
+++ b/src/App.css
@@ -202,6 +202,50 @@ nav ul {
   grid-template-columns: repeat(2,1fr);
 }
 
+.project-card {
+  margin: 10px;
+  text-decoration: none;
+  color: white;
+  border-radius: 16px;
+  overflow: hidden;
+  position: relative;
+
+}
+
+.project-card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: scale(1.05);
+  transition: all 300ms ease-in-out;
+}
+
+.project-card img:hover {
+  transform: scale(1);
+}
+
+.project-info {
+  padding: 10px;
+  background-color: var(--white);
+  position: absolute;
+  color: var(--gray);
+  font-size: 24px;
+  bottom: 0;
+  z-index: 8;
+  width: 100%;
+}
+
+.project-detail img {
+  width: 100%;
+  height: auto;
+}
+
+.project-detail {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+
 @media screen and (max-width:1200px){
   .hero-wrapper h1 {
     font-size: 36px;
