--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ p {
 }
 
 nav {
-  position: absolute;
+  position: fixed;
   left: 50%;
   bottom: 32px;
   transform: translateX(-50%);
@@ -196,6 +196,11 @@ nav ul {
   background: #252525;
 }
 
+.title-wrapper {
+  max-width: 768px;
+  margin: 36px auto;
+}
+
 .projects-wrapper{
   display: grid;
   gap: 12px;
@@ -216,8 +221,8 @@ nav ul {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  transform: scale(1.05);
-  transition: all 300ms ease-in-out;
+  transform: scale(1.02);
+  transition: all 300ms cubic-bezier(0.25, 1, 0.5, 1);
 }
 
 .project-card img:hover {
@@ -243,6 +248,39 @@ nav ul {
 .project-detail {
   max-width: 800px;
   margin: 0 auto;
+}
+
+.archive-wrapper {
+  max-width: 768px;
+  margin: 0 auto;
+}
+
+.archive-card {
+  border-radius: 0.75rem;
+  border: 1px solid #282828;
+  background: #161414;
+  margin-bottom: 16px;
+  height: 450px;
+  text-decoration: none;
+  color: white;
+  position: relative;
+  overflow: hidden;
+}
+
+.archive-card img {
+  width: 100%;
+  height: auto;
+}
+
+.archive-info {
+  padding: 10px;
+  background-color: var(--white);
+  position: absolute;
+  color: var(--gray);
+  font-size: 24px;
+  bottom: 0;
+  z-index: 8;
+  width: 100%;
 }
 
 
