--- a/src/App.css
+++ b/src/App.css
@@ -14,15 +14,21 @@
 }
 
 [data-theme= 'light']{
-  --bg-color : rgb(245, 245, 245);
+  --bg-color : rgb(235, 235, 235);
+  --nav-color: rgb(255, 255, 255);
   --text-color: rgb(15, 15, 15);
   --all-dark:rgb(0, 0, 0);
+  --border-gray:rgb(190, 190, 190);
+  --text-color-05: rgb(15, 15, 15,0.5);
 }
 
 [data-theme= 'dark']{
+  --nav-color: rgb(31, 31, 31);;
   --bg-color : rgb(15, 15, 15);
   --text-color: rgb(190, 190, 190);
+  --text-color-05: rgb(190, 190, 190,0.5);
   --all-dark:rgb(255, 255, 255);
+  --border-gray:rgb(40, 40, 40);
 }
 
 
@@ -70,8 +76,8 @@ nav {
   transform: translateX(-50%);
   padding: 0.4rem 0.5rem ;
   border-radius: 0.75rem;
-  border: 1px solid #282828;
-  background: hsla(0, 5%, 8%, 0.40);
+  border: 1px solid var(--border-gray);
+  background: var(--nav-color);
   backdrop-filter: blur(5px);
   box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.20);
   z-index: 999;
@@ -94,12 +100,12 @@ nav ul {
 }
 
 .nav-link a {
-  color: var(--light-gray);
+  color: var(--text-color-05);
   transition: all 500ms ease-in-out;
 }
 
 .activeLink {
-  color: var(--white)!important;
+  color: var(--text-color)!important;
   position: relative;
   text-shadow: 0px 0px 7px rgba(255, 255, 255, 0.25)!important;
   transition: all 500ms ease-in-out!important;
@@ -142,7 +148,7 @@ nav ul {
   width: 60px;
   height: 60px;
   border-radius: 0.5rem;
-  border: 1px solid #282828;
+  border: 1px solid var(--border-gray);
   background: linear-gradient(180deg, #FDB25A 0%, #220606 50%, #6E96EF 100%);
   display: flex;
   align-items:center ;
@@ -172,6 +178,7 @@ nav ul {
 .highlight-text-mono {
   font-family:monospace;
   margin: 18px 2px 10px;
+  color: var(--text-color);
 }
 
 .hero-wrapper p{
