--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 
 :root {
   --white : rgba(255,255,255,1);
-  --black: rgb(0,0,0);
+
   --border-gray: rgb(40, 40, 40);
   --gray:#161414;
   --light-gray:rgb(221, 221, 221) ;
@@ -21,6 +21,8 @@
   --all-dark:rgb(0, 0, 0);
   --border-gray:rgb(219, 219, 219);
   --text-color-05: rgb(15, 15, 15,0.5);
+  --black-white: rgb(255, 255, 255);
+  --black-white-0: rgba(255, 255, 255, 0);
 }
 
 [data-theme= 'dark']{
@@ -31,6 +33,9 @@
   --text-color-05: rgb(190, 190, 190,0.5);
   --all-dark:rgb(255, 255, 255);
   --border-gray:rgb(40, 40, 40);
+
+  --black-white: rgb(0,0,0);
+  --black-white-0: rgba(0, 0, 0, 0);
 }
 
 
@@ -40,6 +45,19 @@
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+}
+
+body::-webkit-scrollbar {
+  width: 4px;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: var(--bg-color);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: var(--border-gray);
 
 }
 
@@ -59,7 +77,7 @@ h1 {
 }
 
 h2 {
-  font-size: 36px;
+  font-size: 42px;
   line-height:normal;
   color: var(--text-color);
 }
@@ -241,10 +259,11 @@ nav ul {
   text-decoration: none;
   color: white;
   border-radius: 16px;
-  overflow: hidden;
+  /* overflow: hidden; */
+
   position: relative;
   width: 1024px;
-  height: 640px;
+  height: 680px;
   border: 1px solid var(--border-gray);
 }
 
@@ -252,23 +271,29 @@ nav ul {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  transform: scale(1.02);
+  border-radius: 16px;
+  transform: scale(1.0);
   transition: all 300ms cubic-bezier(0.25, 1, 0.5, 1);
 }
 
-.project-card img:hover {
-  transform: scale(1);
-}
+
+/* background: linear-gradient(0deg, #000 0%, rgba(0, 0, 0, 0.40) 71.5%, rgba(0, 0, 0, 0.00) 100%); */
 
 .project-info {
-  padding:1.4rem 1.0rem;
+  padding: 1.4rem;
+  display: flex;
+  align-items: flex-end;
   background-color: var(--nav-color);
+  backdrop-filter:blur(2px);
   position: absolute;
   color: var(--text-color);
   font-size: 24px;
-  bottom: 0;
+  bottom: -2px;
+  left: -2px;
   z-index: 8;
-  width: 100%;
+  width: 100.4%;
+  height: 10%;
+  border-radius: 0 0 16px 16px;
 }
 
 .project-detail img {
@@ -375,14 +400,14 @@ nav ul {
     width: 90%;
   }
 
-  .project-card {
-    width: 100%;
-
-    height: 520px;
-  }
 
   .hero-wrapper h1 {
     font-size: 36px;
+  }
+
+  .project-card {
+    width: 100%;
+    height: 600px;
   }
 
 }
@@ -399,6 +424,11 @@ nav ul {
   .hero-wrapper p {
     font-size: 14px;
     width: 80%;
+  }
+
+  .project-card {
+    width: 100%;
+    height: 420px;
   }
 
   .social-links {
