--- a/src/App.css
+++ b/src/App.css
@@ -41,10 +41,10 @@
   --text-color-05: rgb(190, 190, 190,0.5);
   --all-dark:rgb(255, 255, 255);
   --border-gray:rgb(40, 40, 40);
-  
+
   --black-white: rgb(0,0,0);
   --black-white-0: rgba(0, 0, 0, 0);
-  
+
   --nav-color: rgb(24, 24, 24);
   --nav-icon-box: rgb(38, 38, 38);
   --nav-icon-color: rgb(124,124,124);
@@ -305,8 +305,8 @@ p {
 
   margin: 0 auto;
   display: grid;
-  gap: 36px;
-  grid-template-columns: repeat(1,1fr);
+  gap: 16px;
+  grid-template-columns: repeat(2,1fr);
   place-items: center;
 
 }
@@ -319,8 +319,8 @@ p {
   /* overflow: hidden; */
 
   position: relative;
-  width: 1024px;
-  height: 680px;
+  width: 100%;
+  height: 100%;
   border: 1px solid var(--border-gray);
 }
 
@@ -350,7 +350,7 @@ p {
   z-index: 8;
   width: 100.4%;
   height: 10%;
-  border-radius: 0 0 16px 16px;
+  border-radius: 0 0 18px 18px;
 }
 
 .project-detail img {
@@ -364,18 +364,21 @@ p {
 }
 
 .archive-wrapper {
-  max-width: 768px;
+  /* max-width: 768px; */
   margin: 0 auto;
+  display: grid;
+  gap: 16px;
+  grid-template-columns: repeat(3,1fr);
 }
 
 .archive-card {
   border-radius: 0.75rem;
-  border: 1px solid #282828;
-  background: #161414;
+  border: 1px solid var(--border-gray);
+  background: var(--black-white);
   margin-bottom: 16px;
   height: 450px;
   text-decoration: none;
-  color: white;
+  color: var(--text-color);
   position: relative;
   overflow: hidden;
 }
@@ -387,19 +390,27 @@ p {
 
 .archive-card video {
   width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover;
   align-items: center;
+  padding-bottom: 18px;
 }
 
 .archive-info {
-  padding: 10px;
-  background-color: var(--white);
+  padding: 1.4rem;
+  display: flex;
+  align-items: flex-end;
+  background-color: var(--nav-color);
+  backdrop-filter:blur(2px);
   position: absolute;
-  color: var(--gray);
+  color: var(--text-color);
   font-size: 24px;
-  bottom: 0;
+  bottom: -2px;
+  left: -2px;
   z-index: 8;
-  width: 100%;
+  width: 100.4%;
+  border-top: 1px solid var(--border-gray) ;
+  border-radius: 0 0 18px 18px;
 }
 
 .toggle-wrapper {
