--- a/src/App.css
+++ b/src/App.css
@@ -152,7 +152,7 @@ p {
 }
 
 .activeLink svg path {
-  fill: #FFFFFF !important;
+  fill: var(--nav-icon-higlight) !important;
 }
 
 /* .activeLink::before{
@@ -277,23 +277,27 @@ p {
 }
 
 .link-box {
-  display: inline-flex;
-  height: 2.4rem;
-  width: 2.4rem;
-  align-items: center;
+  width: 48px;
+  height: 48px;
+  display: flex;
+  align-items:center ;
   justify-content: center;
-  gap: 0.5rem;
-  flex-shrink: 0;
-  border-radius: 0.75rem;
+  border-radius: 9px;
+
   border: 1px solid var(--border-gray);
-  background:var(--black-white);
+  background:var(--nav-color);
   font-size: 14px;
-  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.1), 0px 3px 1px rgba(0, 0, 0, 0.04);
+  /* box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.1), 0px 3px 1px rgba(0, 0, 0, 0.04); */
   transition: all 300ms ease-in-out;
 }
+
 .link-box:hover {
-  box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.15), 0px 3px 1px rgba(0, 0, 0, 0.06);
-  background: var(--nav-color);
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1), 0px 3px 1px rgba(0, 0, 0, 0.02);
+  /* background: var(--nav-highlight); */
+}
+
+.link-box svg path {
+  fill: var(--nav-icon-higlight) !important;
 }
 
 .title-wrapper {
