--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
+  outline: 1px solid red;
 }
 
 body::-webkit-scrollbar {
