background for projects

--- a/src/App.css
+++ b/src/App.css
@@ -226,7 +226,7 @@ p {
   border-radius: 100%;
   position: absolute;
   top: -50vw;
-  filter: blur(100px) invert(80%);
+  filter: blur(100px);
   z-index: 50;
   opacity: 1;
 }
@@ -342,7 +342,7 @@ p {
 }
 
 .social-links {
-  position: absolute;
+  position: fixed;
   display: flex;
   gap: 10px;
   pointer-events:all;
@@ -376,25 +376,57 @@ p {
 
 .title-wrapper {
   max-width: 768px;
-  margin: 56px auto 24px;
+  margin: 72px auto 36px;
 }
 .title-wrapper h2 {
 
-  line-height:52px ;
+  line-height:56px ;
 }
 
 .title-wrapper p {
-  line-height: 24px;
+  margin-top: 8px;
+  line-height: 28px;
   width: 48ch;
+  color: var(--text-color-2);
+}
+
+.top-blob-projects {
+  background-image: linear-gradient(180deg, #FFFFFF 0%, #ff8e62 50%, #8fbd6a 100%);
+  width: 50%;
+  height: auto;
+  aspect-ratio: 1/1;
+  border-radius: 100%;
+  position: absolute;
+  top: -50vw;
+  left: 50%;
+  transform: translateX(-50%);
+  filter: blur(100px);
+  z-index: 50;
+  opacity: 1;
+}
+
+.bot-blob-projects {
+  background-image: url(/public/assets/various/Rectangle.png);
+  background-repeat: repeat;
+  width: 100vw;
+  height: auto;
+  aspect-ratio: 8/3;
+  position: absolute;
+  top: 0%;
+
+    -webkit-mask-image:linear-gradient(180deg, #404040 0%, rgba(64, 64, 64, 0.00)100%);
+    mask-image: linear-gradient(180deg, #404040 0%, rgba(64, 64, 64, 0.00)100%);
+    opacity: 0.5;
 }
 
 .projects-wrapper{
 
   margin: 0 auto;
   display: grid;
-  gap: 16px;
-  grid-template-columns: repeat(2,1fr);
+  gap: 48px;
+  grid-template-columns: repeat(1,1fr);
   place-items: center;
+  max-width: 1199px;
 
 }
 
@@ -501,7 +533,7 @@ p {
 }
 
 .toggle-wrapper {
-  position: absolute;
+  position: fixed;
   top: 14px;
   right: 14px;
   display: flex;
